# my_django_project

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/doc/: my-docker-compose.md  my-dockerfile.md  readme.md
.github/workflows/: unit-tests.yaml
api_client/: aws-app.http  items.http  kedro-app.http  redis-app.http  sse-app.http
apis/: items.http
basic_python/: context_manager.ipynb  generator.ipynb  hello.py
basic_python/docs/: readme.md
config/: api.py  settings.py  urls.py
data/processed/: processed_data_20241031_081537.json  processed_data_20241031_081541.json  processed_data_20241031_082825.json  processed_data_20241101_222249.json  processed_data_20241109_104317.json
my_aws_app/: api.py  apps.py
my_aws_app/docs/: readme.md
my_aws_app/tests/: readme.md  test_aws_app.py
my_chatpp/: api.py  apps.py  models.py
my_chatpp/docs/: mychatapp.md
my_kedro_api/: api.py  apps.py  views.py
my_kedro_api/docs/: 1-bootstrap.md
my_kedro_api/kedro/: catalog.yml  nodes.py  pipeline.py  readme.md  runner.py  runner_json.py  runner_json_custom.py
my_redis_app/: api.py  apps.py
my_redis_app/docs/: readme.md
my_sse_app/: api.py  apps.py
my_sse_app/controllers/: sse_with_query.py  task.py
my_sse_app/docs/: readme.md
my_sse_app/models/: task.py
my_sse_app/schema/: ChatbotEvent.py  task.py
myapp/: api.py  views.py
myapp/controllers/: sse.py
myapp/docs/: readme.md  (+1 more)
p2_account/: apps.py  forms.py  urls.py  views.py
tests/: settings.py
(+29 files in other folders)
