[tool.poetry]
name = "my-django-project"
version = "0.1.0"
description = ""
authors = ["XUeshuo Li <spoonlee24k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
django-ninja = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
